--- a/wiki/fr/TechDraw_Midpoints.html
+++ b/wiki/fr/TechDraw_Midpoints.html
@@ -60,12 +60,10 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
-<ol><li>S&eacute;lectionner une ou plusieurs ar&ecirc;tes dans une vue.</li>
+<ol><li>S&eacute;lectionnez une ou plusieurs ar&ecirc;tes dans une vue.</li>
 <li>Il y a plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
-<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_Midpoints.svg&amp;filetimestamp=20240710132001&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Midpoints.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ajouter des sommets au milieu</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Ajouter des sommets &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_Midpoints.svg&amp;filetimestamp=20240710132001&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Midpoints.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ajouter des sommets au milieu</b> du menu.</li></ul></li></ol>
-</div>
+<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_Midpoints.svg&amp;filetimestamp=20240710132001&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Midpoints.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Sommets au milieu</a></span>.</li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Ajouter des sommets &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_Midpoints.svg&amp;filetimestamp=20240710132001&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Midpoints.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Sommets au milieu</b> du menu.</li></ul></li></ol>
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
@@ -136,15 +134,15 @@
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119184022
+Cached time: 20260119184100
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.090 seconds
-Real time usage: 0.185 seconds
-Preprocessor visited node count: 392/1000000
-Post&#8208;expand include size: 25906/2097152 bytes
-Template argument size: 10010/2097152 bytes
+CPU time usage: 0.105 seconds
+Real time usage: 0.511 seconds
+Preprocessor visited node count: 391/1000000
+Post&#8208;expand include size: 25882/2097152 bytes
+Template argument size: 9986/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -152,19 +150,19 @@ Unstrip post&#8208;expand size: 2244/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   49.332      1 -total
- 19.04%    9.393      1 Template:TechDraw_Tools_navi/fr
- 11.58%    5.714      2 Template:Navigation_menu_2
- 10.01%    4.939      1 Template:GuiCommand/fr
-  9.69%    4.778      1 Template:Userdocnavi/fr
-  8.82%    4.349      1 Template:MenuCommand
-  8.57%    4.229      2 Template:Docnav/fr
-  8.01%    3.950      1 Template:Caption
-  7.52%    3.710      1 Template:Code
-  7.27%    3.587      1 Template:Button
+100.00%  132.099      1 -total
+ 21.71%   28.681      1 Template:TechDraw_Tools_navi/fr
+ 17.13%   22.632      1 Template:Clear
+ 10.70%   14.133      2 Template:Docnav/fr
+  8.99%   11.873      2 Template:Navigation_menu_2
+  8.77%   11.585      1 Template:GuiCommand/fr
+  7.20%    9.515      1 Template:Userdocnavi/fr
+  5.94%    7.849      1 Template:Code
+  5.72%    7.554      1 Template:Version/fr
+  5.36%    7.079      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156792-0!canonical and timestamp 20260119184022 and revision id 1741055. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156792-0!canonical and timestamp 20260119184100 and revision id 1741057. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
