--- a/wiki/fr/TechDraw_Midpoints.html
+++ b/wiki/fr/TechDraw_Midpoints.html
@@ -131,12 +131,12 @@
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119184146
+Cached time: 20260119184219
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.090 seconds
-Real time usage: 0.161 seconds
+CPU time usage: 0.106 seconds
+Real time usage: 0.196 seconds
 Preprocessor visited node count: 390/1000000
 Post&#8208;expand include size: 25882/2097152 bytes
 Template argument size: 9986/2097152 bytes
@@ -147,19 +147,19 @@ Unstrip post&#8208;expand size: 2248/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   49.098      1 -total
- 22.70%   11.147      1 Template:TechDraw_Tools_navi/fr
- 17.10%    8.397      2 Template:Navigation_menu_2
- 10.76%    5.285      1 Template:Userdocnavi/fr
-  9.40%    4.614      1 Template:GuiCommand/fr
-  9.27%    4.550      1 Template:Caption
-  7.52%    3.694      2 Template:Docnav/fr
-  7.13%    3.499      1 Template:Version/fr
-  7.01%    3.444      1 Template:Code
-  6.48%    3.180      1 Template:MenuCommand
+100.00%   44.753      1 -total
+ 27.85%   12.462      1 Template:TechDraw_Tools_navi/fr
+ 23.61%   10.565      2 Template:Navigation_menu_2
+ 12.98%    5.810      1 Template:Userdocnavi/fr
+  9.57%    4.285      1 Template:Clear
+  8.35%    3.737      2 Template:Docnav/fr
+  7.79%    3.488      1 Template:GuiCommand/fr
+  6.42%    2.871      1 Template:Code
+  5.57%    2.491      1 Template:MenuCommand
+  5.40%    2.415      1 Template:Version/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156792-0!canonical and timestamp 20260119184146 and revision id 1741059. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156792-0!canonical and timestamp 20260119184219 and revision id 1741059. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
