--- a/wiki/fr/TechDraw_Midpoints.html
+++ b/wiki/fr/TechDraw_Midpoints.html
@@ -16,7 +16,7 @@
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
-<p><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_Midpoints.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span><span> </span>TechDraw Sommet au milieu
+<p><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_Midpoints.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span><span> </span>TechDraw Sommets au milieu
 </p>
 </td></tr>
 <tr>
@@ -131,15 +131,15 @@
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119184219
+Cached time: 20260119184224
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.106 seconds
-Real time usage: 0.196 seconds
+CPU time usage: 0.088 seconds
+Real time usage: 0.275 seconds
 Preprocessor visited node count: 390/1000000
-Post&#8208;expand include size: 25882/2097152 bytes
-Template argument size: 9986/2097152 bytes
+Post&#8208;expand include size: 25884/2097152 bytes
+Template argument size: 9988/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -147,19 +147,19 @@ Unstrip post&#8208;expand size: 2248/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   44.753      1 -total
- 27.85%   12.462      1 Template:TechDraw_Tools_navi/fr
- 23.61%   10.565      2 Template:Navigation_menu_2
- 12.98%    5.810      1 Template:Userdocnavi/fr
-  9.57%    4.285      1 Template:Clear
-  8.35%    3.737      2 Template:Docnav/fr
-  7.79%    3.488      1 Template:GuiCommand/fr
-  6.42%    2.871      1 Template:Code
-  5.57%    2.491      1 Template:MenuCommand
-  5.40%    2.415      1 Template:Version/fr
+100.00%  103.743      1 -total
+ 15.46%   16.043      1 Template:TechDraw_Tools_navi/fr
+ 12.96%   13.442      1 Template:Userdocnavi/fr
+ 10.44%   10.834      1 Template:Version/fr
+  9.74%   10.109      1 Template:GuiCommand/fr
+  9.13%    9.469      2 Template:Navigation_menu_2
+  8.71%    9.035      1 Template:Clear
+  8.12%    8.422      1 Template:Code
+  8.06%    8.360      1 Template:Caption
+  6.79%    7.047      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156792-0!canonical and timestamp 20260119184219 and revision id 1741059. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156792-0!canonical and timestamp 20260119184224 and revision id 1741062. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
