--- a/wiki/fr/TechDraw_Midpoints.html
+++ b/wiki/fr/TechDraw_Midpoints.html
@@ -53,7 +53,7 @@
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<p>L'outil <b>TechDraw Sommet au milieu</b> ajoute des <a href="../fr/TechDraw_CosmeticVertex.html" title="TechDraw CosmeticVertex/fr">sommets cosm&eacute;tiques</a> au milieu d'une ou plusieurs ar&ecirc;tes s&eacute;lectionn&eacute;es.
+<p>L'outil <b>TechDraw Sommets au milieu</b> ajoute des <a href="../fr/TechDraw_CosmeticVertex.html" title="TechDraw CosmeticVertex/fr">sommets cosm&eacute;tiques</a> au milieu d'une ou plusieurs ar&ecirc;tes s&eacute;lectionn&eacute;es.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticMidpoint_Sample.png&amp;filetimestamp=20190521120456&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticMidpoint_Sample.png" decoding="async" width="250" height="231" class="mw-file-element" data-file-width="384" data-file-height="355"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Sommets cosm&eacute;tiques au milieu des ar&ecirc;tes</p>
@@ -131,12 +131,12 @@
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119184224
+Cached time: 20260119184233
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.088 seconds
-Real time usage: 0.275 seconds
+CPU time usage: 0.095 seconds
+Real time usage: 0.211 seconds
 Preprocessor visited node count: 390/1000000
 Post&#8208;expand include size: 25884/2097152 bytes
 Template argument size: 9988/2097152 bytes
@@ -147,19 +147,19 @@ Unstrip post&#8208;expand size: 2248/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  103.743      1 -total
- 15.46%   16.043      1 Template:TechDraw_Tools_navi/fr
- 12.96%   13.442      1 Template:Userdocnavi/fr
- 10.44%   10.834      1 Template:Version/fr
-  9.74%   10.109      1 Template:GuiCommand/fr
-  9.13%    9.469      2 Template:Navigation_menu_2
-  8.71%    9.035      1 Template:Clear
-  8.12%    8.422      1 Template:Code
-  8.06%    8.360      1 Template:Caption
-  6.79%    7.047      1 Template:MenuCommand
+100.00%   74.597      1 -total
+ 20.33%   15.168      1 Template:TechDraw_Tools_navi/fr
+ 12.88%    9.605      2 Template:Navigation_menu_2
+ 12.83%    9.572      1 Template:Userdocnavi/fr
+ 11.08%    8.266      1 Template:Version/fr
+  9.10%    6.789      1 Template:Clear
+  8.94%    6.670      1 Template:MenuCommand
+  8.51%    6.350      1 Template:GuiCommand/fr
+  6.67%    4.976      1 Template:KEY
+  6.46%    4.817      2 Template:Docnav/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156792-0!canonical and timestamp 20260119184224 and revision id 1741062. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156792-0!canonical and timestamp 20260119184233 and revision id 1741064. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
