--- a/wiki/fr/TechDraw_Midpoints.html
+++ b/wiki/fr/TechDraw_Midpoints.html
@@ -72,7 +72,7 @@
 <p><span id="Properties"></span>
 </p>
 <h2><span id="Propri.C3.A9t.C3.A9s"></span><span class="mw-headline" id="Propri&eacute;t&eacute;s">Propri&eacute;t&eacute;s</span></h2>
-<p>Les points cosm&eacute;tiques n'ont pas de propri&eacute;t&eacute;s propres car ils ne sont pas des objets de document. Ils partagent les param&egrave;tres de couleur et de taille avec des points de g&eacute;om&eacute;trie r&eacute;guliers.
+<p>Les Sommets cosm&eacute;tiques n'ont pas de propri&eacute;t&eacute;s propres car ils ne sont pas des objets de document. Ils partagent les param&egrave;tres de couleur et de taille avec des points de g&eacute;om&eacute;trie r&eacute;guliers.
 </p><p><span id="Scripting"></span>
 </p>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
@@ -131,12 +131,12 @@
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119184233
+Cached time: 20260119184258
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.095 seconds
-Real time usage: 0.211 seconds
+CPU time usage: 0.096 seconds
+Real time usage: 0.425 seconds
 Preprocessor visited node count: 390/1000000
 Post&#8208;expand include size: 25884/2097152 bytes
 Template argument size: 9988/2097152 bytes
@@ -147,19 +147,19 @@ Unstrip post&#8208;expand size: 2248/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   74.597      1 -total
- 20.33%   15.168      1 Template:TechDraw_Tools_navi/fr
- 12.88%    9.605      2 Template:Navigation_menu_2
- 12.83%    9.572      1 Template:Userdocnavi/fr
- 11.08%    8.266      1 Template:Version/fr
-  9.10%    6.789      1 Template:Clear
-  8.94%    6.670      1 Template:MenuCommand
-  8.51%    6.350      1 Template:GuiCommand/fr
-  6.67%    4.976      1 Template:KEY
-  6.46%    4.817      2 Template:Docnav/fr
+100.00%   90.819      1 -total
+ 18.88%   17.149      1 Template:TechDraw_Tools_navi/fr
+ 18.68%   16.961      2 Template:Navigation_menu_2
+ 17.05%   15.484      1 Template:Version/fr
+ 13.97%   12.683      1 Template:Userdocnavi/fr
+ 12.64%   11.477      1 Template:Clear
+ 12.35%   11.213      1 Template:Button
+ 10.02%    9.098      1 Template:MenuCommand
+  3.48%    3.165      1 Template:GuiCommand/fr
+  2.89%    2.628      1 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156792-0!canonical and timestamp 20260119184233 and revision id 1741064. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156792-0!canonical and timestamp 20260119184258 and revision id 1741066. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
