Updated page TechDraw CosmeticVertex/fr

--- a/wiki/fr/TechDraw_CosmeticVertex.html
+++ b/wiki/fr/TechDraw_CosmeticVertex.html
@@ -8,7 +8,7 @@
 <li><a href="../ko/TechDraw_CosmeticVertex.html" class="mw-pt-progress mw-pt-progress--med" title="&#44592;&#49696;&#46020;&#47732; &#44984;&#48136;&#51216; (69% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ShowAll.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ShowAll.html" title="TechDraw ShowAll/fr">Montrer tout</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_Midpoints.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_Midpoints.html" title="TechDraw Midpoints/fr">Sommet au milieu</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_Midpoints.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_Midpoints.html" title="TechDraw Midpoints/fr">Sommets au milieu</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
@@ -141,15 +141,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119183838
+Cached time: 20260119184315
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.077 seconds
-Real time usage: 0.108 seconds
+CPU time usage: 0.084 seconds
+Real time usage: 0.154 seconds
 Preprocessor visited node count: 393/1000000
-Post&#8208;expand include size: 26441/2097152 bytes
-Template argument size: 10194/2097152 bytes
+Post&#8208;expand include size: 26444/2097152 bytes
+Template argument size: 10196/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -157,19 +157,19 @@ Unstrip post&#8208;expand size: 4010/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.741      1 -total
- 32.82%    5.822      1 Template:TechDraw_Tools_navi/fr
- 22.74%    4.034      2 Template:Navigation_menu_2
- 13.54%    2.402      1 Template:Userdocnavi/fr
- 11.34%    2.012      2 Template:Docnav/fr
- 10.15%    1.800      1 Template:GuiCommand/fr
-  8.38%    1.486      1 Template:Code
-  7.65%    1.357      1 Template:Caption
-  6.29%    1.116      4 Template:Button
-  5.68%    1.008      1 Template:MenuCommand
+100.00%   28.234      1 -total
+ 24.68%    6.969      1 Template:TechDraw_Tools_navi/fr
+ 20.21%    5.705      2 Template:Navigation_menu_2
+ 14.75%    4.165      1 Template:Userdocnavi/fr
+ 13.57%    3.831      1 Template:GuiCommand/fr
+ 11.80%    3.331      2 Template:Docnav/fr
+  9.22%    2.603      1 Template:Code
+  8.91%    2.515      1 Template:Caption
+  7.33%    2.070      4 Template:Button
+  6.67%    1.883      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156790-0!canonical and timestamp 20260119183838 and revision id 1741053. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156790-0!canonical and timestamp 20260119184315 and revision id 1741068. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
