--- a/wiki/fr/TechDraw_CosmeticVertex.html
+++ b/wiki/fr/TechDraw_CosmeticVertex.html
@@ -47,7 +47,7 @@
 <th class="ctOdd">Voir aussi
 </th></tr>
 <tr>
-<td class="ctEven"><a href="../fr/TechDraw_Midpoints.html" title="TechDraw Midpoints/fr">TechDraw Point milieu</a>, <a href="../fr/TechDraw_Quadrants.html" title="TechDraw Quadrants/fr">TechDraw Sommets quadrants</a>
+<td class="ctEven"><a href="../fr/TechDraw_Midpoints.html" title="TechDraw Midpoints/fr">TechDraw Sommets au milieu</a>, <a href="../fr/TechDraw_Quadrants.html" title="TechDraw Quadrants/fr">TechDraw Sommets quadrants</a>
 </td></tr>
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
@@ -141,15 +141,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119184315
+Cached time: 20260119184323
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.084 seconds
-Real time usage: 0.154 seconds
+CPU time usage: 0.082 seconds
+Real time usage: 0.116 seconds
 Preprocessor visited node count: 393/1000000
-Post&#8208;expand include size: 26444/2097152 bytes
-Template argument size: 10196/2097152 bytes
+Post&#8208;expand include size: 26454/2097152 bytes
+Template argument size: 10206/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -157,19 +157,19 @@ Unstrip post&#8208;expand size: 4010/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.234      1 -total
- 24.68%    6.969      1 Template:TechDraw_Tools_navi/fr
- 20.21%    5.705      2 Template:Navigation_menu_2
- 14.75%    4.165      1 Template:Userdocnavi/fr
- 13.57%    3.831      1 Template:GuiCommand/fr
- 11.80%    3.331      2 Template:Docnav/fr
-  9.22%    2.603      1 Template:Code
-  8.91%    2.515      1 Template:Caption
-  7.33%    2.070      4 Template:Button
-  6.67%    1.883      1 Template:MenuCommand
+100.00%   23.881      1 -total
+ 27.82%    6.643      1 Template:TechDraw_Tools_navi/fr
+ 19.10%    4.562      2 Template:Navigation_menu_2
+ 16.21%    3.872      1 Template:Userdocnavi/fr
+ 11.02%    2.632      2 Template:Docnav/fr
+  9.12%    2.177      1 Template:Caption
+  8.91%    2.127      1 Template:GuiCommand/fr
+  8.08%    1.929      4 Template:Button
+  7.82%    1.867      1 Template:Code
+  7.53%    1.798      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156790-0!canonical and timestamp 20260119184315 and revision id 1741068. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156790-0!canonical and timestamp 20260119184323 and revision id 1741070. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
