--- a/wiki/fr/TechDraw_CosmeticVertex.html
+++ b/wiki/fr/TechDraw_CosmeticVertex.html
@@ -98,7 +98,7 @@
 </p>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ShowAll.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ShowAll.html" title="TechDraw ShowAll/fr">Montrer tout</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_Midpoints.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_Midpoints.html" title="TechDraw Midpoints/fr">Sommet au milieu</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_Midpoints.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_Midpoints.html" title="TechDraw Midpoints/fr">Sommets au milieu</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
@@ -141,15 +141,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119184323
+Cached time: 20260119184353
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.082 seconds
-Real time usage: 0.116 seconds
+CPU time usage: 0.094 seconds
+Real time usage: 0.517 seconds
 Preprocessor visited node count: 393/1000000
-Post&#8208;expand include size: 26454/2097152 bytes
-Template argument size: 10206/2097152 bytes
+Post&#8208;expand include size: 26457/2097152 bytes
+Template argument size: 10208/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -157,19 +157,19 @@ Unstrip post&#8208;expand size: 4010/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.881      1 -total
- 27.82%    6.643      1 Template:TechDraw_Tools_navi/fr
- 19.10%    4.562      2 Template:Navigation_menu_2
- 16.21%    3.872      1 Template:Userdocnavi/fr
- 11.02%    2.632      2 Template:Docnav/fr
-  9.12%    2.177      1 Template:Caption
-  8.91%    2.127      1 Template:GuiCommand/fr
-  8.08%    1.929      4 Template:Button
-  7.82%    1.867      1 Template:Code
-  7.53%    1.798      1 Template:MenuCommand
+100.00%  150.568      1 -total
+ 31.21%   46.992      1 Template:TechDraw_Tools_navi/fr
+ 27.04%   40.710      1 Template:GuiCommand/fr
+ 12.11%   18.238      2 Template:Navigation_menu_2
+ 10.81%   16.270      1 Template:Userdocnavi/fr
+  8.10%   12.190      1 Template:Caption
+  6.90%   10.394      4 Template:Button
+  5.47%    8.241      1 Template:Code
+  5.04%    7.588      1 Template:MenuCommand
+  4.75%    7.149      2 Template:Docnav/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156790-0!canonical and timestamp 20260119184323 and revision id 1741070. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156790-0!canonical and timestamp 20260119184352 and revision id 1741072. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
