Updated page TechDraw Quadrants/fr

--- a/wiki/fr/TechDraw_Quadrants.html
+++ b/wiki/fr/TechDraw_Quadrants.html
@@ -56,7 +56,7 @@
 <p>L'outil <b>TechDraw Sommets quadrants</b> ajoute trois <a href="../fr/TechDraw_CosmeticVertex.html" title="TechDraw CosmeticVertex/fr">sommets cosm&eacute;tiques</a> sur la longueur d'une ou plusieurs ar&ecirc;tes s&eacute;lectionn&eacute;es. Les sommets sont plac&eacute;s &agrave; 25&nbsp;%, 50&nbsp;% et 75&nbsp;% de la longueur de l'ar&ecirc;te. Pour une ar&ecirc;te circulaire, cela se traduit par des sommets cosm&eacute;tiques &agrave; 90&deg;, 180&deg; et 270&deg;, en plus de son sommet g&eacute;om&eacute;trique &agrave; 0&deg;.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticQuadrant_Sample.png&amp;filetimestamp=20190521120525&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticQuadrant_Sample.png" decoding="async" width="250" height="261" class="mw-file-element" data-file-width="330" data-file-height="345"></a></span>
 </p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Les sommets cosm&eacute;tiques au quadrant d'un cercle</p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Les sommets cosm&eacute;tiques aux quadrants d'un cercle</p>
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
@@ -135,15 +135,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119184439
+Cached time: 20260119184515
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.090 seconds
-Real time usage: 0.252 seconds
+CPU time usage: 0.089 seconds
+Real time usage: 0.142 seconds
 Preprocessor visited node count: 389/1000000
-Post&#8208;expand include size: 25959/2097152 bytes
-Template argument size: 10064/2097152 bytes
+Post&#8208;expand include size: 25963/2097152 bytes
+Template argument size: 10066/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -151,19 +151,19 @@ Unstrip post&#8208;expand size: 2238/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   94.967      1 -total
- 22.64%   21.503      1 Template:TechDraw_Tools_navi/fr
- 15.48%   14.703      2 Template:Navigation_menu_2
- 14.23%   13.515      1 Template:Code
- 10.53%   10.002      1 Template:Caption
-  9.87%    9.371      1 Template:GuiCommand/fr
-  8.45%    8.029      1 Template:MenuCommand
-  8.00%    7.602      1 Template:Version/fr
-  7.67%    7.288      2 Template:Docnav/fr
-  6.23%    5.916      1 Template:Userdocnavi/fr
+100.00%   30.280      1 -total
+ 24.78%    7.503      1 Template:TechDraw_Tools_navi/fr
+ 18.40%    5.571      2 Template:Navigation_menu_2
+ 12.57%    3.807      1 Template:Userdocnavi/fr
+ 10.70%    3.239      1 Template:GuiCommand/fr
+ 10.22%    3.094      2 Template:Docnav/fr
+  9.07%    2.746      1 Template:Code
+  8.77%    2.656      1 Template:Version/fr
+  5.75%    1.741      1 Template:Button
+  5.65%    1.710      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156794-0!canonical and timestamp 20260119184438 and revision id 1741076. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156794-0!canonical and timestamp 20260119184515 and revision id 1741078. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
