--- a/wiki/fr/TechDraw_Quadrants.html
+++ b/wiki/fr/TechDraw_Quadrants.html
@@ -135,12 +135,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119184515
+Cached time: 20260119184526
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.089 seconds
-Real time usage: 0.142 seconds
+Real time usage: 0.144 seconds
 Preprocessor visited node count: 389/1000000
 Post&#8208;expand include size: 25963/2097152 bytes
 Template argument size: 10066/2097152 bytes
@@ -151,19 +151,19 @@ Unstrip post&#8208;expand size: 2238/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   30.280      1 -total
- 24.78%    7.503      1 Template:TechDraw_Tools_navi/fr
- 18.40%    5.571      2 Template:Navigation_menu_2
- 12.57%    3.807      1 Template:Userdocnavi/fr
- 10.70%    3.239      1 Template:GuiCommand/fr
- 10.22%    3.094      2 Template:Docnav/fr
-  9.07%    2.746      1 Template:Code
-  8.77%    2.656      1 Template:Version/fr
-  5.75%    1.741      1 Template:Button
-  5.65%    1.710      1 Template:MenuCommand
+100.00%   38.964      1 -total
+ 31.81%   12.395      1 Template:TechDraw_Tools_navi/fr
+ 20.36%    7.932      2 Template:Navigation_menu_2
+ 15.02%    5.851      1 Template:Userdocnavi/fr
+  9.21%    3.589      1 Template:GuiCommand/fr
+  8.64%    3.366      1 Template:Button
+  8.60%    3.352      2 Template:Docnav/fr
+  6.34%    2.472      1 Template:Version/fr
+  5.44%    2.118      1 Template:Caption
+  4.79%    1.866      1 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156794-0!canonical and timestamp 20260119184515 and revision id 1741078. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156794-0!canonical and timestamp 20260119184526 and revision id 1741078. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
