Updated page Release notes 0.19/fr

--- a/wiki/fr/Release_notes_0.19.html
+++ b/wiki/fr/Release_notes_0.19.html
@@ -881,7 +881,7 @@
 <tr>
 <td><span typeof="mw:File"><a href="../index.php?title=Cosmetic_dimension.png&amp;filetimestamp=20190615221828&amp;.html" class="mw-file-description"><img src="../File/Cosmetic_dimension.png" decoding="async" width="384" height="303" class="mw-file-element" data-file-width="760" data-file-height="600"></a></span>
 </td>
-<td>Nouveaux outils <a href="../fr/TechDraw_CosmeticVertex.html" title="TechDraw CosmeticVertex/fr">TechDraw Ajout point cosm&eacute;tique</a>, <a href="../fr/TechDraw_Midpoints.html" title="TechDraw Midpoints/fr">TechDraw Point milieu</a> et <a href="../fr/TechDraw_Quadrants.html" title="TechDraw Quadrants/fr">TechDraw Ajout sommets quadrants</a> permettent &agrave; l'utilisateur de placer de faux sommets ou dits "cosm&eacute;tiques" pouvant &ecirc;tre utilis&eacute;s pour cr&eacute;er des cotes. Les sommets du milieu et du quadrant peuvent &ecirc;tre utilis&eacute;s pour ajouter respectivement plus de points aux bords droits et courbes (arcs de cercle). L'outil "Point cosm&eacute;tique" peut ajouter un point n'importe o&ugrave; sur la vue de dessin sans avoir besoin d'&ecirc;tre bas&eacute; sur la g&eacute;om&eacute;trie existante.
+<td>Nouveaux outils <a href="../fr/TechDraw_CosmeticVertex.html" title="TechDraw CosmeticVertex/fr">TechDraw Sommet cosm&eacute;tique</a>, <a href="../fr/TechDraw_Midpoints.html" title="TechDraw Midpoints/fr">TechDraw Sommets au milieu</a> et <a href="../fr/TechDraw_Quadrants.html" title="TechDraw Quadrants/fr">TechDraw Sommets quadrants</a> permettent &agrave; l'utilisateur de placer de faux sommets ou dits "cosm&eacute;tiques" pouvant &ecirc;tre utilis&eacute;s pour cr&eacute;er des cotes. Les sommets au milieu et quadrants peuvent &ecirc;tre utilis&eacute;s pour ajouter respectivement plus de points aux ar&ecirc;tes droites et courbes (arcs de cercle). L'outil "Sommet cosm&eacute;tique" peut ajouter un point n'importe o&ugrave; sur la vue de dessin sans avoir besoin d'&ecirc;tre bas&eacute; sur la g&eacute;om&eacute;trie existante.
 <p><a rel="nofollow" class="external text" href="https://www.forum.freecad.org/viewtopic.php?f=35&amp;t=36614">Discussion sur le forum</a>, <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/commit/59e47de5064e3112e65c51a0d32b1ad4584b6a80">commit 59e47de506</a>, <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/commit/94b167f3a200f0a84365dccafcfeb3542f7a6795">commit 94b167f3a2</a>.
 </p>
 </td></tr>
@@ -1188,12 +1188,12 @@
 </td></tr></tbody></table>
 <!-- 
 NewPP limit report
-Cached time: 20260118095427
+Cached time: 20260119184957
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.390 seconds
-Real time usage: 0.566 seconds
+CPU time usage: 0.409 seconds
+Real time usage: 1.715 seconds
 Preprocessor visited node count: 1209/1000000
 Post&#8208;expand include size: 6674/2097152 bytes
 Template argument size: 1794/2097152 bytes
@@ -1204,19 +1204,19 @@ Unstrip post&#8208;expand size: 1760/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.282      1 -total
- 13.14%    3.715      2 Template:PropertyData/fr
- 12.95%    3.663      5 Template:PropertyData
- 12.12%    3.429     36 Template:Incode
- 11.89%    3.362      7 Template:Variable
-  9.29%    2.626      6 Template:MenuCommand
-  7.41%    2.096      4 Template:Value
-  6.94%    1.963      2 Template:FileName
-  5.83%    1.650      2 Template:Button
-  5.57%    1.575      1 Template:TOCright
+100.00%  113.067      1 -total
+ 15.05%   17.015      2 Template:PropertyData/fr
+ 12.35%   13.966      5 Template:PropertyData
+  9.40%   10.626     36 Template:Incode
+  9.09%   10.283      7 Template:Variable
+  8.32%    9.409      2 Template:FileName
+  8.08%    9.133      4 Template:Value
+  6.90%    7.805      9 Template:Emphasis
+  6.76%    7.648      2 Template:Button
+  5.93%    6.708      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:161378-0!canonical and timestamp 20260118095426 and revision id 1740105. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:161378-0!canonical and timestamp 20260119184955 and revision id 1741092. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
