Updated page TechDraw DecorateLine/fr

--- a/wiki/fr/TechDraw_DecorateLine.html
+++ b/wiki/fr/TechDraw_DecorateLine.html
@@ -82,14 +82,12 @@
 </div>
 <p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_CosmeticCircle.html" title="TechDraw CosmeticCircle/fr">Cercle cosm&eacute;tique</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_2PointCosmeticLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_2PointCosmeticLine.html" title="TechDraw 2PointCosmeticLine/fr">Ligne cosm&eacute;tique par 2 points</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ShowAll.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ShowAll.html" title="TechDraw ShowAll/fr">Montrer tout</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">TechDraw</a>
@@ -129,15 +127,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119185203
+Cached time: 20260119185217
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.101 seconds
-Real time usage: 0.186 seconds
-Preprocessor visited node count: 389/1000000
-Post&#8208;expand include size: 27778/2097152 bytes
-Template argument size: 9924/2097152 bytes
+CPU time usage: 0.080 seconds
+Real time usage: 0.349 seconds
+Preprocessor visited node count: 388/1000000
+Post&#8208;expand include size: 27838/2097152 bytes
+Template argument size: 9964/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -145,19 +143,19 @@ Unstrip post&#8208;expand size: 1639/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   41.962      1 -total
- 32.51%   13.642      1 Template:TechDraw_Tools_navi/fr
- 17.36%    7.285      2 Template:Navigation_menu_2
- 15.78%    6.622      1 Template:Userdocnavi/fr
- 11.25%    4.719      1 Template:GuiCommand/fr
-  8.25%    3.463      2 Template:Caption
-  7.52%    3.157      2 Template:Docnav/fr
-  7.42%    3.113      1 Template:Version/fr
-  6.69%    2.808      1 Template:MenuCommand
-  6.63%    2.782      6 Template:Button
+100.00%   85.714      1 -total
+ 20.75%   17.787      1 Template:GuiCommand/fr
+ 19.94%   17.093      1 Template:Userdocnavi/fr
+ 18.28%   15.668      1 Template:TechDraw_Tools_navi/fr
+ 15.04%   12.890      2 Template:Navigation_menu_2
+ 11.63%    9.965      1 Template:MenuCommand
+ 10.76%    9.225      2 Template:Docnav/fr
+  6.86%    5.882      6 Template:Button
+  5.41%    4.634      2 Template:Caption
+  5.32%    4.560      1 Template:Version/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156787-0!canonical and timestamp 20260119185203 and revision id 1741098. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156787-0!canonical and timestamp 20260119185216 and revision id 1741100. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
