--- a/wiki/Macro_Cut_Object_For_Magnets.html
+++ b/wiki/Macro_Cut_Object_For_Magnets.html
@@ -209,12 +209,12 @@ Macro Cut Object for Magnets
 <li><a href="PartDesign_Body.html" title="PartDesign Body">PartDesign Body</a> - Body container documentation</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260119190012
+Cached time: 20260119191602
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.081 seconds
-Real time usage: 0.104 seconds
+CPU time usage: 0.063 seconds
+Real time usage: 0.092 seconds
 Preprocessor visited node count: 158/1000000
 Post&#8208;expand include size: 2639/2097152 bytes
 Template argument size: 917/2097152 bytes
@@ -225,12 +225,12 @@ Unstrip post&#8208;expand size: 909/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.245      1 -total
- 81.72%    7.555      1 Template:Macro
- 15.27%    1.412      3 Template:FileName
+100.00%    7.231      1 -total
+ 78.90%    5.705      1 Template:Macro
+ 17.39%    1.258      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409406-0!canonical and timestamp 20260119190018 and revision id 1741106. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409406-0!canonical and timestamp 20260119191602 and revision id 1741106. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
